add validation option to API
